Project

General

Profile

Actions

Bug #19738

closed

mon assert in propose_pending

Added by John Spray about 7 years ago. Updated about 7 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Category:
-
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

Assertion: /mnt/jenkins/workspace/ceph-dev-new-build/ARCH/x86_64/AVAILABLE_ARCH/x86_64/AVAILABLE_DIST/centos7/DIST/centos7/MACHINE_SIZE/huge/release/12.0.0-2683-g1f1f8e9/rpm/el7/BUILD/ceph-12.0.0-2683-g1f1f8e9/src/mon/PaxosService.cc: 183: FAILED assert(mon->is_leader())
ceph version 12.0.0-2683-g1f1f8e9 (1f1f8e953e708883a2551bf6fb19ca524d2946af)
 1: (ceph::__ceph_assert_fail(char const*, char const*, int, char const*)+0x110) [0x64ac80]
 2: (PaxosService::propose_pending()+0x4e6) [0x48f406]
 3: (Context::complete(int)+0x9) [0x45a109]
 4: (SafeTimer::timer_thread()+0x104) [0x6451c4]
 5: (SafeTimerThread::entry()+0xd) [0x646bed]
 6: (()+0x7dc5) [0xa66cdc5]
 7: (clone()+0x6d) [0xd09a73d]

Split out from #19639

Actions

Also available in: Atom PDF